Addressed Sonar code smells